--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "express": "3.x",
-    "sqlite3": "~2.1.19"
+    "sqlite3": "~2.1.19",
+    "node-zendesk": "0.0.8"
   }
 }
