--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "express": "3.x",
     "sqlite3": "~2.1.19",
-    "node-zendesk": "0.0.8"
+    "node-zendesk": "0.0.8",
+    "async": "~0.2.9"
   }
 }
