--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "express": "3.x",
     "sqlite3": "~2.1.19",
     "node-zendesk": "0.0.8",
-    "async": "~0.2.9"
+    "async": "~0.2.9",
+    "wav": "~0.1.0",
+    "speaker": "0.0.10",
+    "lame": "~1.0.3"
   }
 }
